_sass/_fonts.scss
/* montserrat-alternates-300italic - latin */
@font-face {
  font-family: 'Montserrat Alternates';
  font-style: italic;
  font-weight: 300;
  font-display: swap;
  src: url('../fonts/montserrat-alternates-v12-latin-300italic.eot'); /* IE9 Compat Modes */
  src: url('../fonts/montserrat-alternates-v12-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/montserrat-alternates-v12-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/montserrat-alternates-v12-latin-300italic.woff') format('woff'), /* Modern Browsers */
       url('../fonts/montserrat-alternates-v12-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/montserrat-alternates-v12-latin-300italic.svg#MontserratAlternates') format('svg'); /* Legacy iOS */
}
/* montserrat-regular - latin */
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../fonts/montserrat-v18-latin-regular.eot'); /* IE9 Compat Modes */
  src: url('../fonts/montserrat-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/montserrat-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/montserrat-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../fonts/montserrat-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/montserrat-v18-latin-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
}

